--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="input_title">Please Input Answer</string>
     <string name="input_text">Please type the value you would like to enter into the space.</string>
     <string name="puzzle_complete_title">Puzzle Complete</string>
-    <string name="puzzle_complete_text">Congratulations! You completed the puzzle.</string>
+    <string name="puzzle_complete_text">Congratulations! You completed the puzzle. Click "Ok" to return to the main screen.</string>
 </resources>
